# Openclaw

./: .gitignore  ARCHITECTURE_RAG_RLM.md  BUILD_AUDIT_NOTES.md  FINAL_STATUS.md  FORK_CHANGELOG.md  IMPLEMENTATION_PLAN.md  NEXT_ACTIONS.md  PRD_RAG_RLM_HARNESS.md  PRODUCTION_READY_CHECKLIST.md  PRODUCTION_READY_PRD.md  READINESS_SCORECARD.md  README.md  RELEASE_SUMMARY.md  REMAINING_GAPS_V2.md  REMAINING_GAPS_V3.md  TASK_TRACKER_RAG_RLM.md
.github/workflows/: rust-ci.yml
docs/examples/: blender-addon-brief.md  repo-analysis-brief.md  unreal-plugin-brief.md
docs/prompts/: blender-addon-task.md  repo-analysis-task.md  unreal-plugin-task.md
docs/workflows/: README.md  blender-addon.md  repo-analysis.md  unreal-plugin.md
rust/: .gitignore  BOOTSTRAP.md  CHANGELOG.md  README.md  RELEASE.md
rust/config-examples/: web-operator-auth-policy.example.json
rust/crates/web-backend-core/: Cargo.toml
rust/crates/web-backend-core/src/: api.rs  consumer.rs  lib.rs  main.rs  state.rs
rust/docs/: ARTIFACTS.md  PRIVACY.md  (+3 more)
src/: main.py  runtime.py
tests/: test_blender_demo_assets.py  test_operator_readiness.py  test_porting_workspace.py  test_repo_analysis_demo_assets.py  test_unreal_demo_assets.py  validate_blender_demo.py  validate_operator_readiness.py  validate_release_artifact_manifest.py  validate_release_attestation.py  validate_release_candidate_readiness.py  validate_release_external_witness.py  validate_release_trust_policy.py  validate_repo_analysis_demo.py  validate_signed_release_provenance.py  validate_unreal_demo.py  validate_web_operator_auth_boundary.py
(+75 files in other folders)
