[package]
name = "web-backend-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "claw-webd"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["http1", "json", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
